Added more example colors!

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 			<h1>Cheeky Colors</h1>
 			<h2>What if your background color was a <span style="color: #BADA55">#BADA55</span>?</h2>
 			<div class="color_block">
+				<div class="color_display" style="background-color: #BA77E2;">
+				</div>
+				<div class="color_title">
+					<p>BATTER</p>
+				</div>
+			</div>
+			<div class="color_block">
 				<div class="color_display" style="background-color: #BADA55;">
 				</div>
 				<div class="color_title">
@@ -71,10 +78,59 @@
 				</div>
 			</div>
 			<div class="color_block">
+				<div class="color_display" style="background-color: #2EA;">
+				</div>
+				<div class="color_title">
+					<p>SEA</p>
+				</div>
+			</div>
+			<div class="color_block">
 				<div class="color_display" style="background-color: #BA7;">
 				</div>
 				<div class="color_title">
 					<p>BAT</p>
+				</div>
+			</div>
+			<div class="color_block">
+				<div class="color_display" style="background-color: #AF7;">
+				</div>
+				<div class="color_title">
+					<p>AFT</p>
+				</div>
+			</div>
+			<div class="color_block">
+				<div class="color_display" style="background-color: #4A77E2;">
+				</div>
+				<div class="color_title">
+					<p>HATTER</p>
+				</div>
+			</div>
+			<div class="color_block">
+				<div class="color_display" style="background-color: #CA57E2;">
+				</div>
+				<div class="color_title">
+					<p>CASTER</p>
+				</div>
+			</div>
+			<div class="color_block">
+				<div class="color_display" style="background-color: #FA7;">
+				</div>
+				<div class="color_title">
+					<p>FAT</p>
+				</div>
+			</div>
+			<div class="color_block">
+				<div class="color_display" style="background-color: #E22025;">
+				</div>
+				<div class="color_title">
+					<p>ERRORS</p>
+				</div>
+			</div>
+			<div class="color_block">
+				<div class="color_display" style="background-color: #BAE;">
+				</div>
+				<div class="color_title">
+					<p>BAE</p>
 				</div>
 			</div>
 		</div>
