Small fixes for mobile

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 	<head>
 		<meta name="author" content="Brandon Diaz-Abreu">
-		<meta name="description" content="A list of HEX colors with a little attitude.">
-		<meta name="keywords" content="Brandon Diaz, Brandon Diaz-Abreu, software developer new jersey, full stack developer">
+		<meta name="description" content="A list of HEX colors with a little personality.">
+		<meta name="keywords" content="Fun HEX color names">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="theme-color" content="#BADA55">
+		<meta name="theme-color" content="#408CFF">
 		<meta name="google-site-verification" content="NY1ANoMTcO7X90-hoJus7x5cnj0oAOZjMVvRGcz10t4" />
 		<!-- link rel="stylesheet" href="homepage.css" -->
 		<title>Cheeky Colors</title>
 		<style type="text/css">
 			body{
-				background: #BADA55; /* For browsers that do not support gradients */    
-				background: -webkit-linear-gradient(135deg, #408cff, #da4bff);
-				background: -o-linear-gradient(135deg, #408cff, #da4bff);
-				background: -moz-linear-gradient(135deg, #408cff, #da4bff);
-				background: linear-gradient(135deg, #408cff, #da4bff);
+				background: #408CFF; /* For browsers that do not support gradients */    
+				background: -webkit-linear-gradient(135deg, #408CFF, #DA4BFF);
+				background: -o-linear-gradient(135deg, #408CFF, #DA4BFF);
+				background: -moz-linear-gradient(135deg, #408CFF, #DA4BFF);
+				background: linear-gradient(135deg, #408CFF, #DA4BFF);
 				min-height: 100vh;
 				margin: 0;
 				text-align: center;
@@ -24,8 +24,10 @@
 				margin: 1vh 2vw 0 2vw;
 			}
 			.color_block{
-				width: 15vw;
-				height: 30vh;
+				min-width: 100px;
+				min-height: 120px;
+				width: 20%;
+				height: 20vw;
 				display: inline-block;
 				background-color: #FFFFFF;
 				border-radius: 12px;
@@ -42,6 +44,10 @@
 			.color_title{
 				background-color: #FFFFFF;
 				text-align: center;
+			}
+			.color_title p{
+				/*font-size: 30px; Good for desktop*/
+				margin: 0.9vmin 0;
 			}
 		</style>
 	</head>
