Usability design update

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 			.color_display{
 				height: 48%;
 				border-radius: 12px 12px 0px 0px;
+				margin: 4% 5% -4% 5%;
 			}
 			.def_link{
 				color: #000000;
