--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta name="author" content="Brandon Diaz-Abreu">
-		<meta name="description" content="A tool for visual designers and web developers. Draw inspiration from these HEX colors that have some personality.">
+		<meta name="description" content="A tool for visual designers and web developers. Draw inspiration from these hex color codes that have some personality.">
 		<meta name="keywords" content="Fun HEX color names">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="theme-color" content="#408CFF">
@@ -130,15 +130,13 @@
 				}
 			}
 		</style>
-		<!-- Hardcode a smaller dictionary of 100 - 400 fun color names -->
-		<script type="text/javascript" src="dictionary/quick_dictionary.js"></script>
 	</head>
 	<body>
 		<div id="main_area">
 			<div class="legible_background">
 				<p style="display:none;">A tool for visual designers and web developers. Draw inspiration from these HEX colors that have some personality.</p>
 				<h1>Cheeky Colors</h1>
-				<p>A collection of over 14,000 words from various languages that can be spelled using the hexadecimal digits. See what colors they produce when used as a hex color code and check their definiton on Wiktionary. Visit the <a href="#">full gallery</a> to search and filter through all the words, or check out the sample below. 
+				<p>A collection of over 14,000 words from various languages that can be spelled using the hexadecimal digits. See what colors they produce when used as a hex color code and check their definiton on Wiktionary. Visit the <a href="gallery.html">full gallery</a> to search and filter through all the words, or check out the sample below. 
 					<span id="desktop_instructions">Hover over a color name to view its hex code.</span>
 					<span id="mobile_instructions">Tap on the name of a color to view its hex code.</span>
 				</p>
@@ -147,7 +145,7 @@
 			<div id="display_area"></div>
 			<div class="button_container">
 				<button id="loader">Load More</button>
-				<button id="redirect"><a href="#">View All</a></button>
+				<button id="redirect"><a href="gallery.html">View All</a></button>
 			</div>
 			<noscript>
 				<div class="color_block">
@@ -189,6 +187,7 @@
 				<div>Please enable JavaScript to view more!</div>
 			</noscript>
 			<script type="text/javascript">
+				var smallDictionary = ['accept','potpie','access','act','ziptop','add','affect','age','ago','aid','aspect','assess','assist','hissed','attach','safest','bad','bag','zoo','bed','beside','cop','dad','debate','decade','decide','defeat','depict','detect','die','dig','dog','eat','effect','egg','escape','estate','etc','ethics','fat','fee','fit','gap','gas','sadist','get','gifted','hat','height','hip','his','zap','hit','doe','pst','hot','ice','its','odd','off','office','oppose','pet','pie','pop','pot','potato','sad','sag','sea','hog','see','set','she','sit','speech','tactic','tap','tea','pasted','the','tie','bet','big','bit','cap','cat','cheese','passed','choice','ace','choose','potato','coffee','tip','hashes','toe','too','pez','top'];
 				var hexMapping = {
 					O:0,
 					I:1,
